2012-12-10  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* gcc.target/arm/neon/vrndaf32.c: New test.
	* gcc.target/arm/neon/vrndqaf32.c: Likewise.
	* gcc.target/arm/neon/vrndf32.c: Likewise.
	* gcc.target/arm/neon/vrndqf32.c: Likewise.
	* gcc.target/arm/neon/vrndmf32.c: Likewise.
	* gcc.target/arm/neon/vrndqmf32.c: Likewise.
	* gcc.target/arm/neon/vrndnf32.c: Likewise.
	* gcc.target/arm/neon/vrndqnf32.c: Likewise.
	* gcc.target/arm/neon/vrndpf32.c: Likewise.
	* gcc.target/arm/neon/vrndqpf32.c: Likewise.

2012-12-09  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* gcc.misc-tests/gcov-12.c: Fix dg order.

	PR middle-end/54470
	* gcc.dg/ipa/iinline-4.c: xfail hooray4 test on 32-bit hppa*-*-*.

	* gcc.dg/torture/pr47917.c: Change "dg-xfail-if" to "dg-xfail-run-if"
	for *-*-hpux10*.

	* gcc.dg/20030711-1.c: Define MAP_FAILED if not defined.
	* gcc.dg/20050826-1.c: Likewise.

2012-12-09  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/vect9.adb: Add -w to dg-options.
	* gnat.dg/vect10.adb: Likewise.

2012-12-09  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/55593
	* gfortran.dg/do_check_8.f90:  New test.

2012-12-08  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/vect10.ad[sb]: New test.

2012-12-08  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/vect9.ad[sb]: New test.
	* gnat.dg/vect9_pkg.ads: New helper.

2012-12-07  Mike Stump  <mikestump@comcast.net>

	* gnat.dg/discr38.adb: Don't use ^M line endings.
	gnat.dg/loop_optimization13.adb: Likewise.
	gnat.dg/loop_optimization13.ads: Likewise.
	gnat.dg/discr36_pkg.adb: Likewise.
	gnat.dg/discr36_pkg.ads: Likewise.
	gnat.dg/loop_optimization11_pkg.ads: Likewise.
	gnat.dg/discr36.ads: Likewise.
	gnat.dg/loop_optimization11.adb: Likewise.

2012-12-07  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/55141
	* gcc.target/i386/pr55141.c: New.

2012-12-07  Dodji Seketeli  <dodji@redhat.com>

	PR c++/54401
	* g++.dg/cpp0x/alias-decl-28.C: New test.
	* g++.dg/cpp0x/alias-decl-16.C: Update.
