@@ -1,3 +1,8 @@
+2012-12-10  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/asan/asan_test.cc: Sync from upstream.
+	* g++.dg/asan/asan_test_utils.h: Likewise.
+
 2012-12-10  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
 
 	* gcc.target/arm/neon/vrndaf32.c: New test.
